--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("img/background.png");
+    background-image: url("../img/background.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top left;
